# py-refresh-legacy-aws-sso-profile

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test_publish.yml
src/refresh_legacy_aws_sso_profile/: __init__.py  refresh.py  version.py
src/refresh_legacy_aws_sso_profile/cli/refresh_legacy_sso/: __init__.py  __main__.py  impl.py
