[project]
name = "refresh-legacy-aws-sso-profile"
version = "0.4.0"
description = "A tool to create/refresh a backwards-compatible AWS profile with temporary credentials from a new-style AWS SSO profile."
authors = [
    {name = "Sam McKelvie", email = "dev@mckelvie.org"},
]
dependencies = [
    "roundtripini>=0.4.0",
    "boto3>=1.34.63",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = [ "AWS", "credentials", "SSO", "login", "token", "authentication", "auth" ]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
refresh-legacy-aws-sso-profile = "refresh_legacy_aws_sso_profile.cli.refresh_legacy_sso:main"

[tool.semantic_release]
version_variables = [
    'src/refresh_legacy_aws_sso_profile/version.py:__version__'
]
version_toml = [
    'pyproject.toml:project.version'
]
branch = 'main'
upload_to_pypi = false
upload_to_release = true
build_command = "pip install pdm && pdm build"

[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"


[tool.pdm.dev-dependencies]
dev = [
    "boto3-stubs>=1.34.63",
    "python-semantic-release>=9.1.1",
]
